fixed somewhat alignment

--- a/src/styles/Experience.css
+++ b/src/styles/Experience.css
@@ -1,7 +1,9 @@
 .main-container {
   width: 100%;
   max-width: 60%; /* Or the maximum width you prefer */
-  margin: 20%;
+  margin-left: 20%;
+  margin-top: 2%;
+  margin-bottom: 5%;
   padding: 20px;
   border: 4px solid var(--green); /* Adjust as necessary */
   font-size: 20px;
@@ -48,4 +50,5 @@
 
 html {
   scroll-behavior: smooth;
+  margin-top:auto;
 }
