--- a/src/styles/Skills.css
+++ b/src/styles/Skills.css
@@ -1,14 +1,18 @@
-.skills-section {
-  background-color: var(--background-color);
-  padding: 5% 0;
-  border: 4px solid var(--green);
-  margin-bottom: 5%;
-  font-size: 20px;
+.skills-section, .main-container {
   width: 100%;
-  max-width: 1200px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  max-width: 60%; /* Set to the same max-width for both */
+  margin-left: 20%; /* Uniform margin-left */
+  margin-top: 2%; /* Uniform margin-top */
+  margin-bottom: 5%; /* Uniform margin-bottom */
+  padding: 20px; /* Set uniform padding */
+  border: 4px solid var(--green); /* Uniform border style */
+  font-size: 20px; /* Uniform font size */
 }
 
+.skills-section {
+  background-color: var(--background-color);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); /* Specific to skills-section */
+}
 .skills-title {
   text-align: center;
   font-size: 2em;
